fix alignment of drawer content

--- a/src/styles/3-components/_drawer.scss
+++ b/src/styles/3-components/_drawer.scss
@@ -4,18 +4,31 @@
 
     .mdc-toolbar {
       background: transparent;
-    }
-
-    .mdc-toolbar__section.mdc-toolbar__section--align-start {
-      padding-left: 16px;
 
       .mdc-toolbar__title {
-        margin-left: 0;
+        margin-left: 20px;
+        font-weight: 300;
+
+        @media (max-width: $mdc-toolbar-mobile-breakpoint) {
+          margin-left: 16px;
+        }
       }
     }
 
     .mdc-list-item {
       @include mdc-states-base-color(white);
+      padding: 0 20px;
+      font-size: .8rem;
+      font-weight: 300;
+      text-transform: uppercase;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      @media (max-width: $mdc-toolbar-mobile-breakpoint) {
+        padding: 0 16px;
+      }
     }
   }
 }
